--- a/package.json
+++ b/package.json
@@ -12,18 +12,27 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/material-nextjs": "^5.15.11",
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "formik": "^2.4.6",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
+    "@types/redux-logger": "^3.0.13",
+    "@types/redux-thunk": "^2.1.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
