--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ deploy_dev:
   stage: deploy
   only:
     refs:
-      - tags
+      - master
   image: alpine
   before_script:
     - apk update
