--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,14 +21,6 @@ deploy_dev:
     - echo "$SSH_PRIVATE_KEY" > id_rsa
     - chmod 600 id_rsa
   script:
-    - ssh -o StrictHostKeyChecking=no -i id_rsa root@193.3.168.81 << 'EOF'
-        cd /var/www/cfhelper.com/cloudflare &&
-        git reset --hard &&
-        git checkout master &&
-        git pull &&
-        export NVM_DIR="$HOME/.nvm" &&
-        [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" &&
-        npm install &&
-        npm run build &&
-        pm2 restart cloudflare
-      EOF
+    - ssh -o StrictHostKeyChecking=no -i id_rsa root@193.3.168.81 "cd /var/www/cfhelper.com/cloudflare && git reset --hard && git checkout master && git pull"
+    - ssh -o StrictHostKeyChecking=no -i id_rsa root@193.3.168.81 "cd /var/www/cfhelper.com/cloudflare && npm run build"
+    - ssh -o StrictHostKeyChecking=no -i id_rsa root@193.3.168.81 "cd /var/www/cfhelper.com/cloudflare && pm2 restart cloudflare"
