--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,18 +22,4 @@ deploy_dev:
     - echo "$SSH_PRIVATE_KEY" > id_rsa
     - chmod 600 id_rsa
   script:
-    - ssh -o StrictHostKeyChecking=no -i id_rsa root@193.3.168.81 << 'EOF'
-        cd /var/www/cfhelper.com/cloudflare &&
-        echo "Current directory: $(pwd)" &&
-        git reset --hard &&
-        git checkout master &&
-        git pull &&
-        echo "Sourcing .bashrc..." &&
-        source ~/.bashrc &&
-        echo "Running npm install..." &&
-        npm install &&
-        echo "Running npm run build..." &&
-        npm run build &&
-        echo "Restarting PM2 process..." &&
-        pm2 restart cloudflare
-      EOF
+    - ssh -o StrictHostKeyChecking=no -i id_rsa root@193.3.168.81 "/bin/bash /var/www/cfhelper.com/cloudflare/deploy_script.sh"
