--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
   DOCKER_TLS_CERTDIR: ""
   DOCKER_DRIVER: overlay2
 
-deploy_dev:
+deploy:
   stage: deploy
   only:
     refs:
@@ -21,4 +21,5 @@ deploy_dev:
     - echo "$SSH_PRIVATE_KEY" > id_rsa
     - chmod 600 id_rsa
   script:
+    - ssh -o StrictHostKeyChecking=no -i id_rsa root@193.3.168.81 "cd /var/www/cfhelper.com/cloudflare && git reset --hard && git checkout master && git pull"
     - ssh -o StrictHostKeyChecking=no -i id_rsa root@193.3.168.81 "/bin/bash /var/www/cfhelper.com/cloudflare/deploy_script.sh"
