--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "next": "^14.2.4",
+    "next-intl": "^3.15.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
