--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,8 +32,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "next.config.js"
-  ],
+    "next.config.ts"
+, "src/app/[lang]/dictionaries.js", "src/app/[lang]/dictionaries.js"  ],
   "exclude": [
     "node_modules"
   ]
